--- a/index.html
+++ b/index.html
@@ -42,34 +42,34 @@
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Para Você</a>
                     <div class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Para Você</a>
-                        <a class="dropdown-item" href="#">Unidades</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Para Você</a>
-                        <a class="dropdown-item" href="#">Unidades</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
+                        <a class="dropdown-item" href="#">Automóvel</a>
+                        <a class="dropdown-item" href="#">Residencial</a>
+                        <a class="dropdown-item" href="#">Vida Individual</a>
+                        <a class="dropdown-item" href="#">Viagem</a>
+                        <a class="dropdown-item" href="#">Profissionais</a>
+                        <a class="dropdown-item" href="#">Fiança Locatícia, <br> Financiamento e <br> Consórcio</a>
                         <a class="dropdown-item" href="#">Seguradoras</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Para Empresa</a>
                     <div class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Para Empresa</a>
-                        <a class="dropdown-item" href="#">Unidades</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
+                        <a class="dropdown-item" href="#">Frota</a>
+                        <a class="dropdown-item" href="#">Empresarial</a>
+                        <a class="dropdown-item" href="#">Vida Global</a>
+                        <a class="dropdown-item" href="#">Transporte</a>
+                        <a class="dropdown-item" href="#">Agricola / Rural</a>
+                        <a class="dropdown-item" href="#">Saúde e Odontológico</a>
+                        <a class="dropdown-item" href="#">Profissionais</a>
+                        <a class="dropdown-item" href="#">Condomínios</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Sinistros</a>
                     <div class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Sinistros</a>
-                        <a class="dropdown-item" href="#">Unidades</a>
-                        <a class="dropdown-item" href="#">Seguradoras</a>
+                        <a class="dropdown-item" href="#">Como Proceder</a>
+                        <a class="dropdown-item" href="#">Assistência 24h</a>
+                        <a class="dropdown-item" href="#">B.O online</a>
                     </div>
                 </li>
                 <li class="nav-item">
