iniciando configuraçao orcamento-page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Seguro Frota</h2>
                         <p>Proteger seu patrimônio é o melhor negócio!</p>
-                    <a href="" id="main-btn">Faça seu orcamento</a>
+                    <a href="pages/orcamento.html" id="main-btn">Faça seu orcamento</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -100,7 +100,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Seguro Residencial</h2>
                         <p>Tranquilidade para sua família e seu patrimônio</p>
-                        <a href="" id="main-btn">Faça seu orcamento</a>
+                        <a href="pages/orcamento.html" id="main-btn">Faça seu orcamento</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -108,7 +108,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Seguro Automóvel</h2>
                         <p>Seguros com as maiores Seguradoras do mercado!</p>
-                        <a href="" id="main-btn">Faça seu orcamento</a>
+                        <a href="pages/orcamento.html" id="main-btn">Faça seu orcamento</a>
                     </div>
                 </div>
 
