--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md  bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
         <a class="navbar-brand" href="">Neide Seguros</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -134,34 +134,34 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Automóvel</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Viagem</h4>
                         <p>Tranquilidade total para você e sua família</p>
                     </div>
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Frota</h4>
                         <p>Proteção para seu patrimônio</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Profissional</h4>
                         <p>Proteja sua carreira</p>
                     </div>
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Residencial</h4>
                         <p>Proteger onde você vive é proteger quem esta ao seu lado</p>
                     </div>
-                    <div class="col service-box1">
+                    <div class="col-12 col-md-4 service-box1">
                         <i class="fas fa-car-alt"></i>
                         <h4>Seguro Vida</h4>
                         <p>Proteger o futuro daqueles que dependem de você é facil</p>
@@ -190,34 +190,34 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/money.png" alt="">
                         <h4>Economia</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/services2.png" alt="">
                         <h4>Agilidade</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/services3.png" alt="">
                         <h4>Customize</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/solidez.jpg" alt="">
                         <h4>Solidez no mercado</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/predio.jpg" alt="">
                         <h4>Estrutura</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
                     </div>
-                    <div class="col-4 service-box">
+                    <div class="col-12 col-md-4 service-box">
                         <img src="imagens/aperto-mao.jpg" alt="">
                         <h4>Profissionais</h4>
                         <p>Operamos com as maiores seguradoras do mercado</p>
@@ -228,11 +228,11 @@
         <div class="app">
             <div class="container">
                 <div class="row aplicativo">
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <img class="smartphone" src="imagens/app-breve.png" alt="">
                     </div>
-                    <div class="col-8">
-                        <h4>App Mila Corretora Seguros</h4>
+                    <div class="col-12 col-md-8">
+                        <h4>App Neide Corretora Seguros</h4>
                         <p>Em breve será disponibilizado o aplicativo da mila, onde você terá acesso a todas suas apólices, data de vencimento e muito mais.</p>
                         <div>
                             <img class="android" src="imagens/android-em-breve.png" alt="">
@@ -246,15 +246,15 @@
         <div class="ajuda">
             <div class="container">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-12 col-md-8">
                         <h5>Tem alguma dúvida ou precisa de ajuda?</h5>
                         <p>Nossa equipe está sempre disposta a resolver seus problemas entre em contato conosco. Confira nossas unidades:</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col-12 col-md-6">
                         <h5>Segunda à Sexta das 8h as 18h.</h5>
                         <a href="#">Confira todas unidades</a>
                     </div>
-                    <div class="col-2">
+                    <div class="col-12 col-md-6">
                         <img src="imagens/contact.png" alt="">
                     </div>
                 </div>
